--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4165,3 +4165,17 @@ body.is-mobile.landing #footer {
   height: 100%;
   width: 100%;
 }
+
+.icn:hover {
+  cursor: pointer;
+  border: 4px solid rgb(255, 255, 255);
+}
+
+#menu > ul > li > a:hover {
+  background-color: rgb(0, 255, 238);
+  border-radius: 12px;
+}
+
+#menu > ul > li > a {
+  padding-left: 3px;
+}
